<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCCCCC"
    tools:context="name.javalex.kiddraw.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btn_new"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/new_pic"
            android:background="#FFCCCCCC" />
<!--

        <ImageButton
            android:id="@+id/btn_undo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/undo"
            android:background="#FFCCCCCC" />

        <ImageButton
            android:id="@+id/btn_redo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/start_new"
            android:src="@drawable/redo"
            android:background="#FFCCCCCC" />
-->


        <ImageButton
            android:id="@+id/btn_brush"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/brush"
            android:src="@drawable/brush"
            android:background="#FFCCCCCC" />
        <ImageButton
            android:id="@+id/btn_eraser"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraser"
            android:background="#FFCCCCCC" />
        <ImageButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/save"
            android:src="@drawable/save"
            android:background="#FFCCCCCC" />
    </LinearLayout>

    <name.javalex.kiddraw.DrawView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1"
        android:background="#FFFFFFFF" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <!-- Top Row -->
        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#d50000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#d50000" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#FFFF0000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF0000" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#8c4400"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#8c4400" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#ff8000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#ff8000" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#ffea00"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#ffea00" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#64dd17"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#64dd17" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#2e7d32"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#2e7d32" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#00bcd4"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#00bcd4" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#304ffe"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#304ffe" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#6200ea"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#6200ea" />



        </LinearLayout>
        <!-- Bottom Row -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#FF990099"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF990099" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#aa00ff"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#aa00ff" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#FFFF00A6"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFF00A6" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#f50057"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#f50057" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#ff8a80"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#ff8a80" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#ffe082"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#ffe082" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#FF000000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FF000000" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#757575"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#757575" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#eeeeee"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#eeeeee" />

            <ImageButton
                android:layout_width="@dimen/brush_large"
                android:layout_height="@dimen/brush_large"
                android:layout_margin="2dp"
                android:background="#FFFFFFFF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/paint"
                android:tag="#FFFFFFFF" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>